# lato-full-api

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  conftest.py  counter.py  main.py  notification.py  pyproject.toml  test_app.py  todo.py
bank/: commands.py  queries.py
bank/domain/: account.py
lato_project/: events.py
lato_project/commands/: command.py
lato_project/domain/: todo.py  todo_read.py
lato_project/queries/: query.py
lato_project/repositories/: todo_repo.py
tests/: test_create.py
